--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -30,9 +30,9 @@
       </video>
     </section>
   </main>
+
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved.</p>
-  </footer>
-  
+    <p>&copy; 2024 TechCon. All rights reserved. copyright</p>
+  </footer> 
 </body>
 </html>
