--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -31,8 +31,8 @@
           the future of technology. </p>
       <img src="images/mission.jpg" alt="TechCon mission Statement">
     </article>
-    <article id="Past Speakers">
-      <h2>Past speakers</h2>
+    <article id="Past-Speakers">
+      <h2>Past peakers</h2>
       <h3>Jessicah Obuya</h3>
       <p>Jessicah Obuya, a renowned AI expert, has been a keynote speaker at TecCon at multiple times, sharing her insight
         on artificial intelligence and machine learning.</p>
