--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -24,6 +24,7 @@
         one of the largest and most influential tech conferences in the world.</P>
       <img src="images/history.jpg" alt="Historical images of the first TechCon event">
     </article>
+
     <article id="mission">
         <h2>Mission </h2>
         <p>our misssion is to foster innovation, collaboration, and learning within the Technology community.
@@ -31,7 +32,8 @@
           the future of technology. </p>
       <img src="images/mission.jpg" alt="TechCon mission Statement">
     </article>
-    <article id="Past-Speakers">
+    
+    <article id="Past Speakers">
       <h2>Past peakers</h2>
       <h3>Jessicah Obuya</h3>
       <p>Jessicah Obuya, a renowned AI expert, has been a keynote speaker at TecCon at multiple times, sharing her insight
@@ -43,6 +45,7 @@
          <img src="https://pbs.twimg.com/profile_images/1784154431837097984/iK_v-2JH_400x400.jpg" alt="Maureen Josephine">
     </article>
   </main>
+
   <footer>
     <p>&copy; 2024 TechCon. All right reserved. copyright.</p>
   </footer>
