--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -47,7 +47,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 TechCon. All right reserved. copyright.</p>
+    <p>&copy; 2024 TechCon. All right reserved. Copyright.</p>
   </footer>
 </body>
 </html>
