--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -34,7 +34,7 @@
     </article>
     
     <article id="Past Speakers">
-      <h2>Past peakers</h2>
+      <h2>Past speakers</h2>
       <h3>Jessicah Obuya</h3>
       <p>Jessicah Obuya, a renowned AI expert, has been a keynote speaker at TecCon at multiple times, sharing her insight
         on artificial intelligence and machine learning.</p>
