--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -66,7 +66,7 @@
     </table>
 </main>
 <footer>
-  <p>&copy; 2024 TechCon. All rights reserved. Copyright</p>
+  <p>&copy; Copyright of TechCon 2024</p>
 </footer>
 </body>
 </html>
