--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -32,7 +32,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved. copyright</p>
+    <p>&copy; 2024 TechCon. All right reserved. Copyright.</p>
   </footer> 
 </body>
 </html>
