--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -22,15 +22,15 @@
       <h2>History</h2>
       <P>TechCon was founded in 2001 as a small gathering of tech enthusiast. over the years, it has grown into 
         one of the largest and most influential tech conferences in the world.</P>
-      <img src="images/history.jpg" alt="Historical images of the first TechCon event">
+      <img src="history.jpg" alt="TechCon historical image">
     </article>
 
     <article id="mission">
         <h2>Mission </h2>
         <p>our misssion is to foster innovation, collaboration, and learning within the Technology community.
           we aim to bring together industry leaders, visionaries, and practitioners to share knowledge and drive 
-          the future of technology. </p>
-      <img src="images/mission.jpg" alt="TechCon mission Statement">
+          the future of technology.</p>
+      <img src="mission.jpg" alt="TechCon mission Statement">
     </article>
     
     <article id="Past Speakers">
@@ -38,14 +38,13 @@
       <h3>Jessicah Obuya</h3>
       <p>Jessicah Obuya, a renowned AI expert, has been a keynote speaker at TecCon at multiple times, sharing her insight
         on artificial intelligence and machine learning.</p>
-      <img src="image/Jessicah_obuya.jpg" alt="Jessicah Obuya">
+      <img src="Jessicah_obuya.jpg" alt="Jessicah Obuya">
       <h3>Maureen Josephine</h3>
       <p>Maureen Josephine, founder and CEO of Women in Tech, is an inspiring speaker known for her insights on
          empowering women in the Technology industry.</p>
          <img src="https://pbs.twimg.com/profile_images/1784154431837097984/iK_v-2JH_400x400.jpg" alt="Maureen Josephine">
     </article>
   </main>
-
   <footer>
     <p>&copy; 2024 TechCon. All right reserved. Copyright.</p>
   </footer>
